# DHDR_bot

log/: latest_build
sperical_bot_2/install/: local_setup.sh  setup.sh
sperical_bot_2/install/sperical_bot_description/share/sperical_bot_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
sperical_bot_2/install/sperical_bot_description/share/sperical_bot_description/config/: controllers.yaml
sperical_bot_2/install/sperical_bot_description/share/sperical_bot_description/launch/: control.launch.py  display.launch.py  launch_sim.launch.py
sperical_bot_2/install/sperical_bot_description/share/sperical_bot_description/meshes/: right_wheel_1.stl
sperical_bot_2/install/sperical_bot_description/share/sperical_bot_description/urdf/: materials.xacro  sperical_bot.gazebo  sperical_bot.xacro
sperical_bot_2/install/spherical_bot_cloud/share/spherical_bot_cloud/: package.bash  package.zsh
sperical_bot_2/log/: latest_build  latest_list
sperical_bot_2/src/sperical_bot_description/: setup.cfg  setup.py
sperical_bot_2/src/sperical_bot_description/launch/: gazebo.launch.py  rsp.launch.py
sperical_bot_2/src/sperical_bot_description/meshes/: base_link.stl  caster_wheel_1.stl  left_wheel_1.stl  sensor_link_1.stl
sperical_bot_2/src/sperical_bot_description/urdf/: gazebo_control.xacro  lidar.xacro  sperical_bot.trans
sperical_bot_2/src/sperical_bot_description/worlds/: empty.world.xml
sperical_bot_2/src/spherical_bot/: package.xml  setup.cfg  setup.py
sperical_bot_2/src/spherical_bot/docs/: hardware_setup.md
sperical_bot_2/src/spherical_bot/launch/: emergency_mode.launch.py  sperical_bot.launch.py
sperical_bot_2/src/spherical_bot/resource/: sperical_bot
sperical_bot_2/src/spherical_bot/scripts/: calibratiion.py  diagnostics.py  emergency_stop.py  memory_monitor.sh  setup_hardware.sh  startup_bot.sh  thermal_monitor.sh
sperical_bot_2/src/spherical_bot/spherical_bot/: __init__.py
sperical_bot_2/src/spherical_bot/spherical_bot/config/: params.yaml
sperical_bot_2/src/spherical_bot/spherical_bot/lib/: motor_driver.py
sperical_bot_2/src/spherical_bot/spherical_bot/nodes/: __init__.py  system_guardian.py
sperical_bot_2/src/spherical_bot/test/: test_basic_nodes.py
sperical_bot_2/src/spherical_bot_cloud/: package.xml  setup.py
sperical_bot_2/src/spherical_bot_cloud/point_cloud_pipeline/data_receiver/: compression_detector.py  data_validator.py  mqtt_pointcloud_subscriber.py  websocket_data_handler.py
sperical_bot_2/src/spherical_bot_cloud/point_cloud_pipeline/decompression_engine/: delta_docoder.py  downsampling_reverser.py  format_converter.py  run_length_decoder.py
sperical_bot_2/src/spherical_bot_cloud/point_cloud_pipeline/noise_removal/: adaptive_thresholding.py  depth_edge_filter.py  radius_outlier_removal.py  statistical_outlier_removal.py  temporal_consistency_filter.py
sperical_bot_2/src/spherical_bot_cloud_interfaces/: CMakeLists.txt  package.xml
sperical_bot_2/src/spherical_bot_cloud_interfaces/msg/: CompressedPointCloud.msg  RobotTelemetry.msg
testing_bot/log/: latest_build
