<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spherical_bot_cloud</name>
  <version>1.0.0</version>
  <description>Cloud services for Spherical Bot - Point cloud processing, SLAM, and web dashboard</description>
  <maintainer email="admin@sphericalbot.com">Spherical Bot Admin</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-pcl</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-sqlalchemy</exec_depend>
  <exec_depend>python3-alembic</exec_depend>
</package>